studentRegistryBackend/Deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app
  labels:
    name: student-app
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: kong
  rules:
    - host: prasanthtest
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-api
                port:
                  number: 5000
